--- a/.editorconfig
+++ b/.editorconfig
@@ -6,8 +6,13 @@ end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 
+[*.{py,rst,ini}]
+indent_style = space
+indent_size = 4
+
 [*.md]
 trim_trailing_whitespace = false
 
-[Makefile]
-indent_style = tab
+[*.yml]
+indent_style = space
+indent_size = 2
